--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
   <title>Vite + React</title>
 </head>
 
